--- a/Task_1.html
+++ b/Task_1.html
@@ -13,11 +13,11 @@
     <ul>
         <li>Educatonal qualities:</li>
         <li>Passed S.S.C with a result of gpa : 4.94 </li>
-        <li>passed H.S.C. with a result of gpa :4 </li>
+        <li>passed H.S.C. with a result of gpa :4.00 </li>
         </ul>   </h2>
         <h3>
             <ol>
-                <li>HOBBIES:</li>
+                HOBBIES:
                 <li>Gameplay</li>
                 <li>Explore the world</li>
                 <li>Research on an interesting topic</li>
