--- a/Task_1.html
+++ b/Task_1.html
@@ -11,7 +11,7 @@
    <h1>Name:MD.RATUL HASAN</h1>
    <h2>
     <ul>
-        <li>Educatonal qualities:</li>
+        Educatonal qualities:
         <li>Passed S.S.C with a result of gpa : 4.94 </li>
         <li>passed H.S.C. with a result of gpa :4.00 </li>
         </ul>   </h2>
